unpackaged/main/default/objects/bt_stripe__Plan2__c/bt_stripe__Plan2__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe Billing. This stores and syncs Price data.</description>
    <label>Stripe Price</label>
    <nameField>
        <label>Stripe Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>