unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Aggregate_Usage__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Aggregate_Usage__c</fullName>
    <description>See documentation.</description>
    <inlineHelpText>See documentation.</inlineHelpText>
    <label>Aggregate Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sum</fullName>
                <label>Sum</label>
            </value>
            <value>
                <fullName>last_during_period</fullName>
                <label>Last During Period</label>
            </value>
            <value>
                <fullName>last_ever</fullName>
                <label>Last Ever</label>
            </value>
            <value>
                <fullName>max</fullName>
                <label>Max</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>