unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount__c</fullName>
    <description>The Amount to be charged in the interval specified.</description>
    <inlineHelpText>The Amount to be charged in the interval specified.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>