unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Billing_Scheme__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Scheme__c</fullName>
    <description>Describes how to compute the price per period.</description>
    <inlineHelpText>Describes how to compute the price per period.</inlineHelpText>
    <label>Billing Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>