unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Full_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Full_Amount__c</fullName>
    <formula>bt_stripe__Amount__c</formula>
    <label>Full Amount</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Currency</type>
</CustomField>