unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Interval__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Interval__c</fullName>
    <description>The frequency with which a subscription should be billed.</description>
    <inlineHelpText>The frequency with which a subscription should be billed.</inlineHelpText>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>