unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Interval_Count__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Interval_Count__c</fullName>
    <description>The number of intervals (specified in the interval property) between subscription billings. For example, interval=month and interval_count=3 bills every 3 months.</description>
    <inlineHelpText>The number of intervals (specified in the interval property) between subscription billings. For example, interval=month and interval_count=3 bills every 3 months.</inlineHelpText>
    <label>Interval Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>