unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Metadata__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Metadata__c</fullName>
    <description>Record metadata pull from Price.</description>
    <inlineHelpText>Record metadata pull from Price.</inlineHelpText>
    <label>Metadata</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>