unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Plan_ID__c</fullName>
    <description>The ID of this Price in the Payment Gateway.</description>
    <inlineHelpText>The ID of this Price in the Payment Gateway.</inlineHelpText>
    <label>Price ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>