unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Product__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product related to this Price.</description>
    <inlineHelpText>The Product related to this Price.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stripe Prices</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>