unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Stripe_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Name__c</fullName>
    <inlineHelpText>Price Nickname.</inlineHelpText>
    <label>Stripe Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>