unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Trial_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Trial_Period_Days__c</fullName>
    <description>Default number of trial days when subscribing a customer to this price.</description>
    <inlineHelpText>Default number of trial days when subscribing a customer to this price.</inlineHelpText>
    <label>Trial Period Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>