unpackaged/main/default/objects/bt_stripe__Plan2__c/fields/bt_stripe__Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Usage_Type__c</fullName>
    <inlineHelpText>Licensed will automatically bill the quantity set for a price when adding it to a subscription, Metered will aggregate the total usage based on usage records. Defaults to licensed.</inlineHelpText>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Licensed</fullName>
                <default>true</default>
                <label>Licensed</label>
            </value>
            <value>
                <fullName>Metered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>